# llm-experiments

crypto-dataviz/: Dockerfile  app.py  app_dataframe.py  compose.yaml  db.py  pyproject.toml  requirements.txt  visualization.py
crypto-dataviz/data/: crypto_data.duckdb
crypto-dataviz/scripts/: load_data.py
employee-dataviz/: app.py  db.py  pyproject.toml  requirements.txt  visualization.py
employee-dataviz/data/: graph_data.duckdb
employee-dataviz/scripts/: load_data.py
instructor-flow/: app.py  pyproject.toml  requirements.txt
instructor-flow/notebooks/: gemini_instructor.ipynb
