[tool.poetry]
name = "employee-dataviz"
version = "0.1.0"
description = ""
authors = ["Carl Kugblenu <ckugblenu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
plotly = "^5.22.0"
pydantic = "^2.7.2"
instructor = "^1.3.2"
streamlit = "^1.35.0"
pandas = "^2.2.2"
duckdb = "^0.10.3"
openai = "^1.30.5"
faker = "^25.3.0"
networkx = "^3.3"
scipy = "^1.13.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
