[tool.poetry]
name = "instructor-flow"
version = "0.1.0"
description = ""
authors = ["Carl Kugblenu <ckugblenu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
instructor = "^1.3.2"
pydantic = "^2.7.2"
openai = "^1.30.5"
notebook = "^7.2.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.5.4"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
